--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
   </head>
   <body>
     <div id="message">
-      <h2>Bonjour Steed</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
+      <h2>Bonjour</h2>
+      <h1>yo</h1>
+      <p>Bienvenue</p>
       <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
