--- a/public/test/ok/index.html
+++ b/public/test/ok/index.html
@@ -7,7 +7,7 @@
         </title>
     </head>
     <body style="background-color: yellow;">
-        <center><img class="ronde" src="luffy.jpg"></center>        
+        <center><img class="arrondi" src="luffy.jpg"></center>        
         <center>
             OK steed
         </center>
