--- a/public/test/ok/index.html
+++ b/public/test/ok/index.html
@@ -9,7 +9,7 @@
     <body style="background-color: yellow;">
         <center><img class="ronde" src="luffy.jpg"></center>        
         <center>
-            OK steed
+            <font size=5pt;><font face="helvetica"><B>OK Steed</B></font>
         </center>
 
  </html>
