--- a/public/test/stage/index.html
+++ b/public/test/stage/index.html
@@ -13,7 +13,7 @@
             </center>
         </font>
         <center>
-            Mon stage
+            <font size=5pt;><font face="helvetica"><B>Mon Stage</B></font>          
         </center>
     </body> 
             
