--- a/public/test/stage/index.html
+++ b/public/test/stage/index.html
@@ -6,7 +6,7 @@
             Mon Stage 
         </title>
     </head>
-    <body>
+    <body style="background-color: red;">
         <font>
             <center>
                 <img class="border-radius"  src="foot.jpg.jpg" >
