--- a/public/test/ok/index.html
+++ b/public/test/ok/index.html
@@ -10,6 +10,20 @@
         <center><img class="ronde" src="luffy.jpg"></center>        
         <center>
             <font size=5pt;><font face="helvetica"><B>OK Steed</B></font>
-        </center>
-
+           </center>
+           <center>
+            <input type="button" onclick="alerter()" value="Appuyer">
+            <input type="button" onclick="refresh()" value="Rafraichir"/> <br/><br/>
+            <script>
+                function alerter() {
+                    alert("bonjour");
+                }
+            </script> 
+            <script type="text/javascript">
+            function refresh(){
+                window.location.reload(false);
+            }
+            </script>
+            </center>
+    </body>
  </html>
